--- a/index.html
+++ b/index.html
@@ -1,27 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>new_b2b_write</title>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
   </head>
   <body>
-					<div class="position-relative">
-						<label class="label">배송형태</label>
-						<label class="select">
-							<select name="ex_1" id="ex_1" onchange="checkPinfo(); setDefaultAddr(); deliverType(this)" data-name="배송형태" required>
-								<option value="" disabled >배송형태 선택</option>
-								<option value="익일수령택배" >익일수령택배</option>
-								<option value="방문수령" >방문수령</option>
-								<option value="퀵착불" >퀵착불</option>
-								<option value="퀵선불" >퀵선불</option>
-								<option value="대리배송" >대리배송</option>
-								<option value="전자배송" >전자배송</option>
-							</select><i></i>
-						</label>
-					</div>
+    <div class="position-relative">
+      <label class="label">배송형태</label>
+      <label class="select">
+        <select name="ex_1" id="ex_1" onchange="checkPinfo(); setDefaultAddr(); deliverType(this)" data-name="배송형태" required>
+          <option value="" disabled>배송형태 선택</option>
+          <option value="익일수령택배">익일수령택배</option>
+          <option value="방문수령">방문수령</option>
+          <option value="퀵착불">퀵착불</option>
+          <option value="퀵선불">퀵선불</option>
+          <option value="대리배송">대리배송</option>
+          <option value="전자배송">전자배송</option></select
+        ><i></i>
+      </label>
+    </div>
     <div id="app"></div>
+    <textarea style="width: 100%; height: 400px" id="data"></textarea>
     <script type="module" src="/src/main.ts"></script>
+    <script>
+      function setData(data) {
+        document.querySelector("#data").value = JSON.stringify(data);
+      }
+      function defaultAddr() {
+        return {
+          name: "우아아",
+          hp1: "12345648",
+          hp2: "123123123",
+          postcode: "3456357",
+        };
+      }
+    </script>
   </body>
 </html>
