--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       </label>
     </div>
     <div id="app"></div>
-    <textarea style="width: 100%; height: 400px" id="data"></textarea>
+    <textarea style="width: 100%; height: 400px; margin-top: 1em" id="data"></textarea>
     <script type="module" src="/src/main.ts"></script>
     <script>
       function setData(data) {
         document.querySelector("#data").value = JSON.stringify(data);
       }
-      function defaultAddr() {
+      function getDefaultAddr() {
         return {
           name: "우아아",
           hp1: "12345648",
