데모코드발전

--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
         });
       }
 
-      function prepareOrder() {
-        return waitValidationData();
+      async function prepareOrder() {
+        const result = await waitValidationData();
+        console.log(result);
       }
     </script>
   </body>
