--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   </head>
   <body>
     <div class="position-relative">
+      <input
+        type="text"
+        id="ca_name" />
       <label class="label">배송형태</label>
       <label class="select">
         <select
